added normalize animation

--- a/ir/assignment1/src/question3/vector_model/score_table.html
+++ b/ir/assignment1/src/question3/vector_model/score_table.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>DOC QUERY TABLE</title>
+	<title>Score Table</title>
 	<style>
 		html, * {
 			box-sizing: border-box;
@@ -34,7 +34,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-	<p>DOC QUERY TABLE</p>
+	<p>Score Table</p>
 	<canvas class='grid' width="1250" height="500">
 		
 	</canvas>
