--- a/ir/assignment1/src/question3/vector_model/normalize.html
+++ b/ir/assignment1/src/question3/vector_model/normalize.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>heading</title>
+	<title>Normalized Score Table</title>
 	<style>
 		html, * {
 			box-sizing: border-box;
@@ -14,7 +14,7 @@
 		}
 
 		.grid {
-			background: lightgreen;
+			background: white;
 			margin: auto;
 		}
 
@@ -34,33 +34,201 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-	<p>heading</p>
-	<canvas class='grid' width="1000" height="500">
+	<p>Normalized Score Table</p>
+	<canvas class='grid' width="1250" height="500">
 		
 	</canvas>
 
 	<script>
 
 // Main
-	let ctx = document.querySelector("canvas").getContext("2d");
-	let size = 10;
-	let arr = [];
-	let time_delay = 1000;
+if(window.localStorage.getItem("idf") == undefined) {
+	window.location.href = "idf.html";
+}
+let ctx = document.querySelector("canvas").getContext("2d");
+let size = 10;
+let document1 = undefined;
+let document2 = undefined;
+let document3 = undefined;
+let columns = new Set();
+let query = [];
+let idf = new Map();
+let time_delay = 1000;
 
 
-	init();
+init();
 // Utility
-	function init() {
-		add_listeners()
+function init() {
+	init_arrays()
+	createTable();
+	add_listeners()
+}
+
+function splitter(str) {
+	return str.split(",");
+}
+
+
+function createRect(pw, ph, index, element, y=0, bg="black", center=true) {
+	ctx.save();
+	ctx.fillStyle = bg;
+	ctx.fillRect(pw * index, y, pw, ph);
+
+
+	ctx.strokeStyle = "white";
+	ctx.strokeRect(pw * index, y, pw, ph);
+	
+	ctx.fillStyle = "white";			
+	ctx.font = "bolder 12px arial"
+	if(center == true)
+		gaps = pw / 2;
+	else gaps = 3
+	ctx.fillText(element, pw * index + gaps, y + ph / 2);
+	
+	ctx.restore();
+}
+
+function createColumn() {
+	let pw = ctx.canvas.width / (columns.size + 1);
+	let ph = 60;
+	index = 0
+	
+	createRect(pw, ph, index, "", 0, "white", false);
+	index++;
+
+	columns.forEach((element) => {
+		createRect(pw, ph, index, element, 0, "red", false);
+		index++;
+	})
+
+	let map = new Map();
+
+	for(let i=0; i<document1.length; i++) {
+		if(map.get(document1[i]))
+			map.set(document1[i], map.get(document1[i])++);
+		else
+			map.set(document1[i], 1);
 	}
 
-	function add_listeners() {
+	gap = 80;
+	y = ph
+	ph = gap;
+	index = 0
+	createRect(pw, ph, index, "DOC1", y, "red", false)
+	index++;
+	columns.forEach((element) => {
+		if(map.get(element))
+			createRect(pw, ph, index, map.get(element) * idf.get(element), y);
+		else
+			createRect(pw, ph, index, 0, y);
+		index++;
+	})
+	
+	map = new Map();
 
+	for(let i=0; i<document2.length; i++) {
+		if(map.get(document2[i]))
+			map.set(document2[i], map.get(document2[i])++);
+		else
+			map.set(document2[i], 1);
 	}
 
-	function sleep(ms) {
-		return new Promise(resolve => setTimeout(resolve, ms));
+	index = 0
+	createRect(pw, ph, index, "DOC2", y + gap, "red", false)
+	index++;
+	columns.forEach((element) => {
+		if(map.get(element))
+			createRect(pw, ph, index, map.get(element) * idf.get(element), y + gap);
+		else
+			createRect(pw, ph, index, 0, y + gap);
+		index++;
+	})
+
+
+	map = new Map();
+
+	for(let i=0; i<document3.length; i++) {
+		if(map.get(document3[i]))
+			map.set(document3[i], map.get(document3[i])++);
+		else
+			map.set(document3[i], 1);
+	}	
+
+	index = 0;
+	createRect(pw, ph, index, "DOC3", y + gap * 2, "red", false)
+	index++;
+	columns.forEach((element) => {
+		if(map.get(element))
+			createRect(pw, ph, index, map.get(element) * idf.get(element), y + gap * 2);
+		else
+			createRect(pw, ph, index, 0, y + gap * 2);
+		index++;
+	})
+
+
+	map = new Map();
+
+	for(let i=0; i<query.length; i++) {
+		if(map.get(query[i]))
+			map.set(query[i], map.get(query[i])++);
+		else
+			map.set(query[i], 1);
 	}
+
+	index = 0;
+	createRect(pw, ph, index, "QUERY", y + gap * 3, "red", false)
+	index++;
+	columns.forEach((element) => {
+		if(map.get(element))
+			createRect(pw, ph, index, map.get(element), y + gap * 3);
+		else
+			createRect(pw, ph, index, 0, y + 3 * gap);
+		index++;
+	})
+
+}
+
+function createTable() {
+	createColumn();
+}
+
+function init_arrays() {
+	document1 = splitter(window.localStorage.getItem("document1"))
+	document2 = splitter(window.localStorage.getItem("document2"))
+	document3 = splitter(window.localStorage.getItem("document3"))
+	query = splitter(window.localStorage.getItem("query"))	
+	id = splitter(window.localStorage.getItem("idf"))
+	col = splitter(window.localStorage.getItem("col"))
+
+	for(let i=0; i<document1.length; i++) {
+		columns.add(document1[i]);
+	}
+
+	for(let i=0; i<document2.length; i++) {
+		columns.add(document2[i]);
+	}
+
+	for(let i=0; i<document3.length; i++) {
+		columns.add(document3[i]);
+	}	
+
+	for(let i=0; i<query.length; i++) {
+		columns.add(query[i]);
+	}
+
+	for(let i=0; i<id.length; i++) {
+		idf.set(col[i], +id[i]);
+	}
+}
+
+function add_listeners() {
+
+}
+
+function sleep(ms) {
+	return new Promise(resolve => setTimeout(resolve, ms));
+}
+
 
 	</script>
 </body>
